--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,27 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Homework JS 10</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
+    <header class="header">
+      <nav class="nav">
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a href="./01-timer.html" class="nav-link">timer</a>
+          </li>
 
-    <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
-    </main>
+          <li class="nav-item">
+            <a href="./02-snackbar.html" class="nav-link">snackbar</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
-    <load src="./partials/footer.html" />
-
-    <script type="module" src="./main.js"></script>
+    <section>
+      <h1 class="welcome-section">Homework JS 10</h1>
+      <img src="./img/javascript.svg" alt="" />
+    </section>
   </body>
 </html>
